# context-bridge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
extension/: background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
extension/icons/: README.md
samples/: demo.py  seed.py
src/context_bridge/: __init__.py  __main__.py  config.py  main.py
src/context_bridge/adapters/cosmosdb/: __init__.py  client.py  consent_storage.py  context_storage.py  user_storage.py
src/context_bridge/adapters/memory/: __init__.py  consent_storage.py  context_storage.py  user_storage.py
src/context_bridge/api/: __init__.py  app.py  dependencies.py
src/context_bridge/api/routes/: bridge.py  consent.py  facts.py  users.py
src/context_bridge/broker/: __init__.py  context_broker.py
src/context_bridge/core/models/: __init__.py  consent.py  context.py  user.py
src/context_bridge/core/ports/: __init__.py  consent_storage.py  context_provider.py  context_storage.py  user_storage.py
src/context_bridge/core/services/: __init__.py  consent_service.py  context_service.py  user_service.py
src/context_bridge/protocol/: __init__.py  auth.py  token_service.py
tests/unit/: test_broker.py  test_consent_service.py  test_context_service.py  test_user_service.py
